# hdar-cross-platform-proof

./: .gitignore  EVIDENCE.md  HDAR3_NOTEBOOK_AUDIT.md  README.md  TRUST_BOUNDARY.md  codespaces_setup.sh  colab_burchi_driver.py  colab_client.py  colab_host_b_server.py  demo_report.html  e2b_runner.py  evidence_fetcher.py  generate_attestation.py  generate_colab_notebook.py  gpu_emulator.py  hdar_host_b_colab.ipynb  host_a_report.json  host_a_seal.py  owner_public_key.txt  prove.py  release.py  render_log_screenshots.py  reproduction_matrix.py  run_host_b.py  run_host_b_embedded.py  run_proof.py  test_end_to_end.py  test_failure_injection.py  verify_all.py  verify_attestations.py  webhook_receiver.py
.github/workflows/: colab-burchi.yml  colab-host-b.yml  e2b-host-b.yml  host_b_proof.yml  reproduction_matrix.yml  verify.yml
capsule_epoch_1/: manifest.json  receipt.json
evidence/: final_verifier_report.json  verifier_report_latest.json
evidence/codespaces/: host_b_report.json  verifier_report.json
evidence/codespaces/capsule_epoch_2/: manifest.json  receipt.json
evidence/e2b/: host_b_report.json  sandbox_termination_receipt.json
evidence/e2b-live-2026-07-22/: host_b_report.json
evidence/e2b-live-2026-07-22/capsule_epoch_2/: environment_manifest.json  manifest.json
evidence/e2b/capsule_epoch_2/: receipt.json
evidence/e2b/host_a/: host_a_report.json  owner_public_key.txt  run_host_b.py
evidence/e2b/host_a/capsule_epoch_1/: manifest.json  (+2 more)
evidence/github-actions/macos-14/: host_b_report.json
rust_verifier/: Cargo.toml
rust_verifier/src/: main.rs
(+8 files in other folders)
