[package]
name = "hdar-verifier"
version = "0.1.0"
edition = "2021"
description = "Independent Rust verifier for HDAR cross-platform proof capsules"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"

[[bin]]
name = "hdar-verify"
path = "src/main.rs"
